Now install gatsby-plugin-create-client-paths: npm install --save gatsby-plugin-create-client-paths

--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "express": "4.16.4",
     "fontfaceobserver": "2.1.0",
     "gatsby": "^2.24.47",
+    "gatsby-plugin-create-client-paths": "^2.3.10",
     "history": "4.9.0",
     "hoist-non-react-statics": "3.3.0",
     "immer": "3.0.0",
