--- a/package.json
+++ b/package.json
@@ -73,6 +73,11 @@
     "fontfaceobserver": "2.1.0",
     "gatsby": "^2.24.47",
     "gatsby-plugin-create-client-paths": "^2.3.10",
+    "gatsby-plugin-react-helmet": "^3.3.10",
+    "gatsby-plugin-resolve-src": "^2.1.0",
+    "gatsby-plugin-sharp": "^2.6.28",
+    "gatsby-transformer-remark": "^2.8.29",
+    "gatsby-transformer-sharp": "^2.5.13",
     "history": "4.9.0",
     "hoist-non-react-statics": "3.3.0",
     "immer": "3.0.0",
@@ -131,6 +136,7 @@
     "eslint-plugin-react-hooks": "1.6.0",
     "eslint-plugin-redux-saga": "1.0.0",
     "file-loader": "3.0.1",
+    "gatsby-plugin-root-import": "^2.0.5",
     "html-loader": "0.5.5",
     "html-webpack-plugin": "3.2.0",
     "image-webpack-loader": "4.6.0",
